--- a/portfolio.html
+++ b/portfolio.html
@@ -8,253 +8,313 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <!-- <a href="/">WebStudio</a> -->
-        <!-- <a href="”#”"><span class="logo">Web</span> Studio</a> -->
+      <!-- header logo  -->
+      <div class="container">
         <a class="logo" href="”#”"
           >Web <span class="logo-studio">Studio</span></a
         >
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="./contact.html" class="link">Контакты</a></li>
-        </ul>
-        <a href="mailto:info@devstudio.com" class="header-contacts"
+
+        <!--- header navigation -->
+        <nav>
+          <ul class="header-text-style list">
+            <li>
+              <a href="./index.html" class="nav-style">Студия</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="nav-style active-page"
+                >Портфолио</a
+              >
+            </li>
+            <li>
+              <a href="./contact.html" class="nav-style">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!--- header contacts -->
+        <a href="mailto:info@devstudio.com" class="header-text-style us"
           >info@devstudio.com</a
         >
-        <a href="tel:+380961111111" class="header-contacts"
+        <a href="tel:+380961111111" class="header-text-style us"
           >+38 096 111 11 11</a
         >
-      </nav>
+        <!--end header contacts -->
+      </div>
     </header>
     <main>
       <nav>
-        <ul class="list">
-          <li><button type="button" class="button-portfolio">Все</button></li>
-          <li>
-            <button type="button" class="button-portfolio">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="button-portfolio">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="button-portfolio">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="button-portfolio">Маркетинг</button>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list">
+            <li>
+              <button
+                type="button"
+                class="text-style-title name-title portfolio-ref"
+              >
+                Все
+              </button>
+            </li>
+            <li>
+              <button
+                type="button"
+                class="text-style-title name-title portfolio-ref"
+              >
+                Веб-сайты
+              </button>
+            </li>
+            <li>
+              <button
+                type="button"
+                class="text-style-title name-title portfolio-ref"
+              >
+                Приложения
+              </button>
+            </li>
+            <li>
+              <button
+                type="button"
+                class="text-style-title name-title portfolio-ref"
+              >
+                Дизайн
+              </button>
+            </li>
+            <li>
+              <button
+                type="button"
+                class="text-style-title name-title portfolio-ref"
+              >
+                Маркетинг
+              </button>
+            </li>
+          </ul>
+        </div>
       </nav>
 
       <h1 class="portfolio-hat">Portfolio</h1>
 
       <section class="portfolio-section">
-        <ul>
-          <li>
-            <!-- Технокряк -->
-            <a href="">
-              <img
-                src="./img/img-portfolio/technocrack.svg"
-                alt="веб-сайт Технокряк"
-              />
-              <h2 class="portfolio-section-title">Технокряк</h2>
-              <p>Веб-сайт</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <!-- Постер New Orlean vs Golden Star -->
-            <a href="">
-              <img
-                src="./img/img-portfolio/design.svg"
-                alt="Постер New Orlean vs Golden Star"
-              />
-              <h2 class="portfolio-section-title">
-                Постер New Orlean vs Golden Star
-              </h2>
-              <p>Дизайн</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <!-- Ресторан Seafood -->
-            <a href="">
-              <img
-                src="./img/img-portfolio/restaurant.svg"
-                alt="Ресторан Seafood"
-              />
-              <h2 class="portfolio-section-title">Ресторан Seafood</h2>
-              <p>Приложение</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <!-- Проект Prime -->
-            <a href="">
-              <img
-                src="./img/img-portfolio/prime-project.svg"
-                alt="Проект Prime"
-              />
-              <h2 class="portfolio-section-title">Проект Prime</h2>
-              <p>Маркетинг</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <!-- Проект Boxes -->
-            <a href="">
-              <img
-                src="./img/img-portfolio/box-project.svg"
-                alt="Проект Boxes"
-              />
-              <h2 class="portfolio-section-title">Проект Boxes</h2>
-              <p>Приложение</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <!-- Inspiration has no Borders -->
-            <a href="">
-              <img
-                src="./img/img-portfolio/inspir-no-birders.svg"
-                alt="Inspiration has no Borders"
-              />
-              <h2 class="portfolio-section-title">
-                Inspiration has no Borders
-              </h2>
-              <p>Веб-сайт</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <!-- Издание Limited Edition -->
-            <a href="">
-              <img
-                src="./img/img-portfolio/limited-edition.svg"
-                alt="Издание Limited Edition"
-              />
-              <h2 class="portfolio-section-title">Издание Limited Edition</h2>
-              <p>Дизайн</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <!-- Проект LAB -->
-            <a href="">
-              <img
-                src="./img/img-portfolio/lab-project.svg"
-                alt="Growing Business"
-              />
-              <h2 class="portfolio-section-title">Growing Business</h2>
-              <p>Приложение</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <!-- Growing Business -->
-            <a href="">
-              <img
-                src="./img/img-portfolio/growing-busines.svg"
-                alt="Проект LAB"
-              />
-              <h2 class="portfolio-section-title">Проект LAB</h2>
-              <p>Маркетинг</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list">
+            <li>
+              <!-- Технокряк -->
+              <a href="">
+                <img
+                  src="./img/img-portfolio/technocrack.svg"
+                  alt="веб-сайт Технокряк"
+                />
+                <h2 class="portfolio-section-title">Технокряк</h2>
+                <p>Веб-сайт</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <!-- Постер New Orlean vs Golden Star -->
+              <a href="">
+                <img
+                  src="./img/img-portfolio/design.svg"
+                  alt="Постер New Orlean vs Golden Star"
+                />
+                <h2 class="portfolio-section-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p>Дизайн</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <!-- Ресторан Seafood -->
+              <a href="">
+                <img
+                  src="./img/img-portfolio/restaurant.svg"
+                  alt="Ресторан Seafood"
+                />
+                <h2 class="portfolio-section-title">Ресторан Seafood</h2>
+                <p>Приложение</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <!-- Проект Prime -->
+              <a href="">
+                <img
+                  src="./img/img-portfolio/prime-project.svg"
+                  alt="Проект Prime"
+                />
+                <h2 class="portfolio-section-title">Проект Prime</h2>
+                <p>Маркетинг</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <!-- Проект Boxes -->
+              <a href="">
+                <img
+                  src="./img/img-portfolio/box-project.svg"
+                  alt="Проект Boxes"
+                />
+                <h2 class="portfolio-section-title">Проект Boxes</h2>
+                <p>Приложение</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <!-- Inspiration has no Borders -->
+              <a href="">
+                <img
+                  src="./img/img-portfolio/inspir-no-birders.svg"
+                  alt="Inspiration has no Borders"
+                />
+                <h2 class="portfolio-section-title">
+                  Inspiration has no Borders
+                </h2>
+                <p>Веб-сайт</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <!-- Издание Limited Edition -->
+              <a href="">
+                <img
+                  src="./img/img-portfolio/limited-edition.svg"
+                  alt="Издание Limited Edition"
+                />
+                <h2 class="portfolio-section-title">Издание Limited Edition</h2>
+                <p>Дизайн</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <!-- Проект LAB -->
+              <a href="">
+                <img
+                  src="./img/img-portfolio/lab-project.svg"
+                  alt="Growing Business"
+                />
+                <h2 class="portfolio-section-title">Growing Business</h2>
+                <p>Приложение</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <!-- Growing Business -->
+              <a href="">
+                <img
+                  src="./img/img-portfolio/growing-busines.svg"
+                  alt="Проект LAB"
+                />
+                <h2 class="portfolio-section-title">Проект LAB</h2>
+                <p>Маркетинг</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer class="">
-      <!-- секция контактов-->
-      <section>
-        <h2>
-          <a class="logo" href="”#”"
-            >Web <span class="logo-studio logo-footer">Studio</span></a
-          >
-        </h2>
+    <footer>
+      <div class="container">
+        <!-- footer contacts / секция контактов/ -->
+        <section>
+          <h2>
+            <a class="logo" href="”#”"
+              >Web <span class="logo-studio logo-footer">Studio</span></a
+            >
+          </h2>
 
-        <address>
+          <address class="footer-text-style">
+            <p>
+              г. Киев, пр-т Леси Украинки, 26
+            </p>
+            <a
+              class="footer-text-style footer-us"
+              href="mailto:info@example.com"
+              >info@example.com</a
+            >
+
+            <a class="footer-text-style footer-us" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </address>
+        </section>
+
+        <!-- footer community / cекция соцсетей / -->
+        <section>
+          <h2 class="text-style-title footer-title">присоединяйтесь</h2>
+
+          <a href="">
+            <img src="./img/community-logo/instagram-logo.svg" alt="instagram"
+          /></a>
+          <a href="">
+            <img src="./img/community-logo/twitter.svg" alt="twitter" />
+          </a>
+          <a href="">
+            <img src="./img/community-logo/facebook.svg" alt="facebook" />
+          </a>
+          <a href="">
+            <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
+          </a>
+        </section>
+
+        <!--  footer subscribing / секция подписки / -->
+        <h2 class="text-style-title footer-title">Подпишитесь на рассылку</h2>
+        <form>
+          <p class="form-text"><input placeholder="E-mail" name="email" /></p>
           <p>
-            г. Киев, пр-т Леси Украинки, 26
+            <button
+              class="ref-style button-style"
+              formaction="3298901@gmail.com"
+            >
+              Подписаться
+              <img src="./img/community-logo/send-logo.svg" alt="send logo" />
+            </button>
           </p>
-          <a class="contacts" href="mailto:info@example.com"
-            >info@example.com</a
-          >
-
-          <a class="contacts" href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
-      </section>
-
-      <!-- секция соцсетей -->
-      <section>
-        <h2 class="footer-title">присоединяйтесь</h2>
-
-        <a href="">
-          <img src="./img/community-logo/instagram-logo.svg" alt="instagram"
-        /></a>
-        <a href="">
-          <img src="./img/community-logo/twitter.svg" alt="twitter" />
-        </a>
-        <a href="">
-          <img src="./img/community-logo/facebook.svg" alt="facebook" />
-        </a>
-        <a href="">
-          <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
-        </a>
-      </section>
-
-      <!-- секция подписки -->
-      <h2 class="footer-title">Подпишитесь на рассылку</h2>
-      <form>
-        <p class="form-text"><input placeholder="E-mail" name="email" /></p>
-        <p>
-          <button class="button" formaction="3298901@gmail.com">
-            Подписаться
-          </button>
-        </p>
-      </form>
-      <p class="copyright">2020 | Developed by GoIT Students</p>
+        </form>
+        <!--  footer developing -->
+        <p class="copyright">2020 | Developed by GoIT Students</p>
+      </div>
     </footer>
   </body>
 </html>
